docs: add api operation
