# docs/swagger.json
@@ -1,8 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "APIs for articles.",
-        "title": "Go Clean Arch - Articles API Documentattion",
+        "description": "This is the first line\nThis is the second line\nAnd so forth.",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
             "name": "API Support",
@@ -12,51 +11,86 @@
         "license": {
             "name": "Apache 2.0",
             "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-        },
-        "version": "1.0"
+        }
     },
-    "host": "petstore.swagger.io",
-    "basePath": "/v2",
     "paths": {
         "/articles": {
             "get": {
-                "description": "get string by ID",
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    },
+                    {
+                        "OAuth2Implicit": [
+                            "admin",
+                            "write"
+                        ]
+                    }
+                ],
+                "description": "This is the first line\nThis is the second line\nAnd so forth.",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Show a account",
+                "tags": [
+                    "article"
+                ],
+                "summary": "fetch article example",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Number of articles",
+                        "name": "num",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Cursor",
+                        "name": "cursor",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "enum": [
+                            "A",
+                            "B",
+                            "C"
+                        ],
+                        "type": "string",
+                        "description": "string enums",
+                        "name": "enumstring",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/domain.Article"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/GetArticlesResponse"
+                            }
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "ok",
                         "schema": {
-                            "$ref": "#/definitions/domain.Article"
+                            "type": "string"
                         }
                     },
                     "404": {
-                        "description": "Bad Request",
+                        "description": "ok",
                         "schema": {
-                            "$ref": "#/definitions/domain.Article"
+                            "type": "string"
                         }
                     },
                     "500": {
-                        "description": "Internal Server Error",
+                        "description": "ok",
                         "schema": {
-                            "$ref": "#/definitions/domain.Article"
-                        }
-                    },
-                    "default": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/domain.Article"
+                            "type": "string"
                         }
                     }
                 }
@@ -64,7 +98,7 @@
         }
     },
     "definitions": {
-        "domain.Article": {
+        "GetArticlesResponse": {
             "type": "object",
             "required": [
                 "content",
@@ -82,6 +116,14 @@
                 },
                 "id": {
                     "type": "integer"
+                },
+                "order": {
+                    "description": "Sort order:\n* asc - Ascending, from A to Z.\n* desc - Descending, from Z to A.",
+                    "type": "string",
+                    "enum": [
+                        "asc",
+                        "desc"
+                    ]
                 },
                 "title": {
                     "type": "string"
@@ -106,6 +148,53 @@
                 "updated_at": {
                     "type": "string"
                 }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
+        },
+        "BasicAuth": {
+            "type": "basic"
+        },
+        "OAuth2AccessCode": {
+            "type": "oauth2",
+            "flow": "accessCode",
+            "authorizationUrl": "https://example.com/oauth/authorize",
+            "tokenUrl": "https://example.com/oauth/token",
+            "scopes": {
+                "admin": " Grants read and write access to administrative information"
+            }
+        },
+        "OAuth2Application": {
+            "type": "oauth2",
+            "flow": "application",
+            "tokenUrl": "https://example.com/oauth/token",
+            "scopes": {
+                "admin": " Grants read and write access to administrative information",
+                "write": " Grants write access"
+            }
+        },
+        "OAuth2Implicit": {
+            "type": "oauth2",
+            "flow": "implicit",
+            "authorizationUrl": "https://example.com/oauth/authorize",
+            "scopes": {
+                "admin": " Grants read and write access to administrative information",
+                "write": " Grants write access"
+            }
+        },
+        "OAuth2Password": {
+            "type": "oauth2",
+            "flow": "password",
+            "tokenUrl": "https://example.com/oauth/token",
+            "scopes": {
+                "admin": " Grants read and write access to administrative information",
+                "read": " Grants read access",
+                "write": " Grants write access"
             }
         }
     }
